--- a/Todos projetos/Projeto 7/css/style.css
+++ b/Todos projetos/Projeto 7/css/style.css
@@ -1,4 +1,10 @@
 /* styles.css */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
 
 /* Estilo base */
 body {
