--- a/Todos projetos/Projeto 8/css/style.css
+++ b/Todos projetos/Projeto 8/css/style.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
 body {
     display: flex;
     flex-direction: column;
